--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 <div class="note">
   <strong>For clients:</strong> Enter the details below. Click Generate to download a .docx complaint ready for review/filing.<br>
   • Attach Exhibit A (Credit Agreement), Exhibit B (Invoices), Exhibit C (Affidavit of Account) manually after download.<br>
-  • Filing typically in the District Court of the defendant's county; fees ~$30–$65 + service.
+  • Filing fees typically in the Circuit Court of the defendant's county; fees ~$185 + process of service ~$100 per defendant.
 </div>
 
 <div class="warning">
-  <strong>Important:</strong> This generates a civil complaint with multiple counts (including attorney fees, disgorgement, etc.). For debts ≤ $5,000, small claims division may be simpler/faster (no attorneys needed). Consult if unsure.
+  <strong>Important:</strong> This generates a civil complaint with multiple causes of actions for collections of in house credit accounts for material suppliers (including attorney fees, disgorgement, etc.). Consult if unsure.
 </div>
 
 <form id="form">
@@ -98,4 +98,5 @@ async function generateDocument() {
 </script>
 
 </body>
+
 </html>
