--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
 <h1>Collection Lawsuit Client Intake</h1>
-<p style="text-align:center; font-style:italic;">Corbitt Law Firm, PLLC – Generate filled Arkansas District Court Complaint</p>
+<p style="text-align:center; font-style:italic;">Corbitt Law Firm, PLLC – Generate filled Arkansas Circuit Court Complaint</p>
 
 <div class="note">
   <strong>For clients:</strong> Enter the details below. Click Generate to download a .docx complaint ready for review/filing.<br>
@@ -100,3 +100,4 @@ async function generateDocument() {
 </body>
 
 </html>
+
