--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </div>
 
 <div class="warning">
-  <strong>Important:</strong> This generates a civil complaint with multiple causes of actions for collections of in house credit accounts for material suppliers (including attorney fees, disgorgement, etc.). Consult if unsure.
+  <strong>Important:</strong> This generates a civil complaint with multiple causes of actions for collections of in house credit accounts for material suppliers (including attorney fees, disgorgement, etc.).
 </div>
 
 <form id="form">
@@ -56,7 +56,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
 
 <script>
-const TEMPLATE_URL = "https:cpcorbitt.github.io/collections/collection-lawsuit-draft.docx"; // ← CHANGE THIS to your actual public URL
+const TEMPLATE_URL = "https:cpcorbitt.github.io/collections/"; // ← CHANGE THIS to your actual public URL
 
 async function generateDocument() {
   const amountInput = document.getElementById("amount_due").value;
@@ -100,5 +100,6 @@ async function generateDocument() {
 </body>
 
 </html>
+
 
 
