Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
 
 <script>
-const TEMPLATE_URL = "https://cdn.jsdelivr.net/gh/cpcorbitt/collections@main/collection%20lawsuit%20draft.docx"; // ← CHANGE THIS to your actual public URL
+const TEMPLATE_URL = "https://raw.githubusercontent.com/cpcorbitt/collections/main/collection-complaint-template.docx"; // ← CHANGE THIS to your actual public URL
 
 async function generateDocument() {
   const amountInput = document.getElementById("amount_due").value;
@@ -100,6 +100,7 @@ async function generateDocument() {
 </body>
 
 </html>
+
 
 
 
